--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-test.a = 1
+#mybatis.mapper-locations:classpath:com/barunsw/app/mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1q2w3e4r
