회원가입 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 #mybatis.mapper-locations:classpath:com/barunsw/app/mapper/*.xml
+#debug 설정은 개발단계에서만 적용 운영할때는 제거
+logging.level.org.apache.coyote.http11=info
+#logging.level.root=debug
+
 mybatis.configuration.map-underscore-to-camel-case=true
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1q2w3e4r
+#spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=1q2w3e4r
+spring.datasource.url=jdbc:postgresql://192.168.0.100:30148/postgres
+spring.datasource.username=barun
+spring.datasource.password=password
+
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
