--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
@@ -82,10 +84,14 @@
 		</dependency>
 		
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-       
+	       	<groupId>org.springframework.boot</groupId>
+	       	<artifactId>spring-boot-starter-aop</artifactId>
+	   	</dependency>
+	   	
+	   	<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>
 	</dependencies>	
 	
 	<build>
