--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode=development --watch --emptyOutDir",
+    "build-prd": "vite build --emptyOutDir",
     "preview": "vite preview"
   },
   "dependencies": {
