--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,eclipse,java,node,vue
 
 rebel.xml
-
+node
 ### DBBEAR ###
 .dbeaver
 
