[김균태] DB 정보 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mybatis.mapper-locations:classpath:com/barunsw/app/mapper/*.xml
-#debug 설정은 개발단계에서만 적용 운영할때는 제거
+#debug \uc124\uc815\uc740 \uac1c\ubc1c\ub2e8\uacc4\uc5d0\uc11c\ub9cc \uc801\uc6a9 \uc6b4\uc601\ud560\ub54c\ub294 \uc81c\uac70
 logging.level.org.apache.coyote.http11=info
 #logging.level.root=debug
 
@@ -8,9 +8,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://192.168.0.100:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=1q2w3e4r
-spring.datasource.url=jdbc:postgresql://192.168.0.100:30148/postgres
+spring.datasource.url=jdbc:postgresql://192.168.0.100:35432/ojt
 spring.datasource.username=barun
-spring.datasource.password=password
+spring.datasource.password=!brswdb@b0
 
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
